DATE        AUTHOR      CHANGE
---------- -----------  -------------------------------------------------------
[Version 1.0.0 released - 3.2.2009]============================================

2007-08-01 patrickh     Updated for SConsAddons changes. On Windows, the
                        build formerly called "hybrid" is now the "debug"
                        build. The DLL is installed in lib\debug. The build
                        formerly called "debug" is now the "debugrt" build (to
                        indicate that it is linked against the Visual C++ debug
                        runtime). The library is still named with "_d".
                        VERSION: 0.7.10
2007-07-25 patrickh     Fixed empty comment processing bug.
2007-07-06 patrickh     Fixed build issues on Mac OS X.
                        VERSION: 0.7.9
2007-06-26 patrickh     Made many build fixes and improvements on Windows.
                        VERSION: 0.7.8
2006-11-07 patrickh     Do not put headers into a versioned directory on
                        Windows.
                        VERSION: 0.7.7
2006-07-13 patrickh     Implemented automatic linking on Windows.
                        VERSION: 0.7.6
2006-07-13 patrickh     Moved the declaration of cppdom::getVersion() to
                        cppdom.h.
2006-07-11 allenb       Expose OptionRepository and cppdom methods in dll.
2006-07-05 allenb       More refactoring of build system.
                        It is not possible to specify all variants to build
                        and build them simultaneously.
2006-06-30 allenb       Refatored the build system to support building on Win32
                        using SCons.  This requires an in-development version
                        of scons-addons to get the EnvironmentBuilder.
2006-06-24 patrickh     Support building universal binaries on Mac OS X.
2006-06-13 allenb       Fixed bug in how NodePtr and DocumentPtr types were